<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_results">No results 😓\nSwipe to refresh</string>
    <string name="no_title">No title</string>
    <string name="pg_rating">PG rating: %1$s</string>
    <string name="searchLabel">Search</string>
    <string name="nothing_found">Nothing found, try again. 😓</string>
    <string name="failed_to_retrieve_data">Failed to retrieve data 😓</string>
    <string name="synopsis">%1$s</string>
    <string name="genres">Genres</string>
    <string name="runtime">Runtime: %1$s</string>
    <string name="ratings">ratings</string>
    <string name="airing_status">Airing status: %1$s</string>
    <string name="publishing">Publishing status: %1$s</string>
    <string name="published">Published from: %1$s</string>
    <string name="aired">Aired from: %1$s</string>
    <string name="score">Score: %1$s</string>
    <string name="scored_by">Scored by %1$s users</string>
    <string name="rank">Rank %1$s</string>
    <string name="popularity">Popularity rank %1$s</string>
    <string name="members">Members: %1$s</string>
    <string name="favorites">Favorites: %1$s</string>
    <string name="title_japanese">"Title in Japanese: %1$1"</string>
    <string name="episodes">Episodes: %1$s</string>
    <string name="chapters">Chapters: %1$s</string>
    <string name="volumes">Volumes: %1$s</string>
    <string name="link_web_page">Link to open web page</string>
    <string name="authors">Authors: %1$s</string>
    <string name="link_trailer">Click to watch trailer</string>
    <string name="serializations">Serializations</string>
    <string name="serialization_name">Name: %1$s</string>
    <string name="serialization_link">Link to web page: %1$s</string>
    <string name="manga">Manga</string>
    <string name="anime">Anime</string>
    <string name="background_headline">Background</string>
    <string name="no_data">n/a</string>
    <string name="jikan_fav"><![CDATA[Favorite anime & manga]]></string>
    <string name="fav_jikan">Favorite jikan</string>
    <string name="favorite">Favorite</string>
    <string name="retry">Retry</string>
</resources>