<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/two_dimen"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSurface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_title"
                        android:textAppearance="?attr/textAppearanceHeadline5"/>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:minWidth="@dimen/min_image_width"
                android:minHeight="@dimen/image_height"
                android:scaleType="fitCenter"
                app:strokeColor="@null" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:hint="@string/synopsis"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/background_headline"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pg_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/pg_rating"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/airing_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/airing_status"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/aired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/aired"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/episodes"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/runtime"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/chapters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/chapters"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/volumes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/volumes"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="Genres"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/six_dimen"
                android:clickable="false"
                android:foregroundGravity="center_horizontal"
                android:layoutDirection="locale"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/genre_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/score"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/genre_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/scored_by"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/genre_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/rank"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="Ratings"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/six_dimen"
                android:clickable="false"
                android:foregroundGravity="center_horizontal"
                android:layoutDirection="locale"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:singleLine="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/score"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/scored_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/scored_by"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/rank"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/popularity"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/members"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/members"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/favorites"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/black"
                    app:chipStrokeWidth="1dp" />

            </com.google.android.material.chip.ChipGroup>

            <View style="@style/Divider.Horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/link_web_page"
                android:textAppearance="?attr/textAppearanceBody1" />

            <View style="@style/Divider.Horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/link_trailer"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/serializations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/serializations"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/serialization_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/serialization_name"
                android:textAppearance="?attr/textAppearanceBody1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/serialization_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/two_dimen"
                android:text="@string/serialization_link"
                android:textAppearance="?attr/textAppearanceBody1" />

            <View style="@style/Divider.Horizontal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>
